--- a/productos.html
+++ b/productos.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="big bags, embalajes, bulk liner, bolsas industriales">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon2.png" rel="icon">
+  <link href="assets/img/lRecurso 3.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -62,7 +62,7 @@
               </li>
             </ul>
           </li>
-          <li><a href="#contact">Diseño</a></li>
+          <li><a href="diseño.html">Diseño</a></li>
           <li class="nav-cta">
             <button class="btn-cta" data-bs-toggle="modal" data-bs-target="#serviciosModal">
               <i class="bi bi-headset"></i>
