--- a/productos.html
+++ b/productos.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="big bags, embalajes, bulk liner, bolsas industriales">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon2.png" rel="icon">
-  <link href="assets/img/lRecurso 3.png" rel="apple-touch-icon">
+  <link href="/assets/img/favicon2.png" rel="icon">
+  <link href="/assets/img/lRecurso 3.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
