--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="row g-4">
           <!-- Big Bags - Producto Destacado -->
           <div class="col-lg-6" data-aos="fade-up">
-            <a href="/productos.html" class="product-card featured">
+            <a href="productos.html" class="product-card featured">
               <div class="product-image">
                 <img src="assets/img/FOTOS/Bolsones.png" alt="Big Bags">
                 <div class="product-badge">Más Vendido</div>
