--- a/productos.html
+++ b/productos.html
@@ -105,7 +105,7 @@
               <div class="product-category">
                 <h3 class="category-title">Big Bags</h3>
                 <div class="product-list-item" onclick="toggleCategory(event, 'big-bags-types')">
-                    <img src="/assets/img/bolsas-01.png" alt="Big Bags">
+                    <img src="./assets/img/bolsas-01.png" alt="Big Bags">
                     <div>
                         <h4>Big Bags</h4>
                         <small>Información General</small>
@@ -116,42 +116,42 @@
                 <!-- Tipos de Big Bags -->
                 <div class="sub-products" id="big-bags-types" style="display: none;">
                   <div class="product-list-item sub-item" data-product-id="boca-abierta-fondo-cerrado">
-                    <img src="/assets/img/bolsas-01.png" alt="Boca Abierta/Fondo Cerrado">
+                    <img src="./assets/img/bolsas-01.png" alt="Boca Abierta/Fondo Cerrado">
                     <div>
                       <h4>Boca Abierta/Fondo Cerrado</h4>
                     </div>
                   </div>
 
                   <div class="product-list-item sub-item" data-product-id="boca-abierta-valvula">
-                    <img src="/assets/img/bolsas-03.png" alt="Boca Abierta/Válvula">
+                    <img src="./assets/img/bolsas-03.png" alt="Boca Abierta/Válvula">
                     <div>
                       <h4>Boca Abierta/Válvula de Descarga</h4>
                     </div>
                   </div>
 
                   <div class="product-list-item sub-item" data-product-id="valvula-carga-fondo-cerrado">
-                    <img src="/assets/img/bolsas-02.png" alt="Válvula de Carga/Fondo Cerrado">
+                    <img src="./assets/img/bolsas-02.png" alt="Válvula de Carga/Fondo Cerrado">
                     <div>
                       <h4>Válvula de Carga/Fondo Cerrado</h4>
                     </div>
                   </div>
 
                   <div class="product-list-item sub-item" data-product-id="boca-pollera-fondo-cerrado">
-                    <img src="/assets/img/bolsas-05.png" alt="Boca con Pollera/Fondo Cerrado">
+                    <img src="./assets/img/bolsas-05.png" alt="Boca con Pollera/Fondo Cerrado">
                     <div>
                       <h4>Boca con Pollera/Fondo Cerrado</h4>
                     </div>
                   </div>
 
                   <div class="product-list-item sub-item" data-product-id="boca-pollera-valvula">
-                    <img src="/assets/img/bolsas-06.png" alt="Boca con Pollera/Válvula">
+                    <img src="./assets/img/bolsas-06.png" alt="Boca con Pollera/Válvula">
                     <div>
                       <h4>Boca con Pollera/Válvula</h4>
                     </div>
                   </div>
 
                   <div class="product-list-item sub-item" data-product-id="valvula-carga-descarga">
-                    <img src="/assets/img/bolsas-04.png" alt="Válvula de Carga y Descarga">
+                    <img src="./assets/img/bolsas-04.png" alt="Válvula de Carga y Descarga">
                     <div>
                       <h4>Válvula de Carga/Válvula de Descarga</h4>
                     </div>
@@ -163,7 +163,7 @@
               <div class="product-category mt-4">
                 <h3 class="category-title">Bulk Liner</h3>
                 <div class="product-list-item" data-product-id="bulk-liner">
-                  <img src="/assets/img/FOTOS/bulk liner.png" alt="Bulk Liner">
+                  <img src="./assets/img/FOTOS/bulk liner.png" alt="Bulk Liner">
                   <div>
                     <h4>Sistema Bulk Liner</h4>
                     <small>Protección total para graneles</small>
@@ -175,7 +175,7 @@
               <div class="product-category mt-4">
                 <h3 class="category-title">Bolsas y Embalajes</h3>
                 <div class="product-list-item" data-product-id="bolsas">
-                  <img src="/assets/img/FOTOS/Bolsareco-producto-bolsas.png" alt="Bolsas y Embalajes">
+                  <img src="./assets/img/FOTOS/Bolsareco-producto-bolsas.png" alt="Bolsas y Embalajes">
                   <div>
                     <h4>Bolsas y Embalajes</h4>
                     <small>Soluciones versátiles</small>
@@ -187,7 +187,7 @@
               <div class="product-category mt-4">
                 <h3 class="category-title">Cubre Cerco</h3>
                 <div class="product-list-item" data-product-id="cubre-cerco">
-                  <img src="/assets/img/FOTOS/cerco.jpeg" alt="Cubre Cerco">
+                  <img src="./assets/img/FOTOS/cerco.jpeg" alt="Cubre Cerco">
                   <div>
                     <h4>Cubre Cerco</h4>
                     <small>Cerramientos profesionales</small>
@@ -199,7 +199,7 @@
               <div class="product-category mt-4">
                 <h3 class="category-title">Diseños Personalizados</h3>
                 <div class="product-list-item" data-product-id="disenos-personalizados">
-                  <img src="/assets/img/FOTOS/diseño.png" alt="Diseños Personalizados">
+                  <img src="./assets/img/FOTOS/diseño.png" alt="Diseños Personalizados">
                   <div>
                     <h4>Soluciones a Medida</h4>
                     <small>Desarrollos específicos</small>
