--- a/nosotros.html
+++ b/nosotros.html
@@ -43,20 +43,20 @@
           <li><a href="index.html" >Home</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
           <li class="dropdown">
-            <a href="/productos.html"><span>Productos</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <a href="productos.html"><span>Productos</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="/productos.html">Bolsas y Embalaje</a></li>
-              <li><a href="/productos.html">Bulk Linker</a></li>
-              <li><a href="/productos.html">Cubre Cerco</a></li>
+              <li><a href="productos.html">Bolsas y Embalaje</a></li>
+              <li><a href="productos.html">Bulk Linker</a></li>
+              <li><a href="productos.html">Cubre Cerco</a></li>
               <li class="dropdown">
-                <a href="/productos.html"><span>Big Bags</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <a href="productos.html"><span>Big Bags</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Boca abierta / Fondo cerrado</a></li>
-                  <li><a href="#">Boca abierta / Válvula de descarga</a></li>
-                  <li><a href="#">Válvula de carga / Fondo cerrado</a></li>
-                  <li><a href="#">Boca con pollera / Fondo cerrado</a></li>
-                  <li><a href="#">Boca con pollera / Válvula de descarga</a></li>
-                  <li><a href="#">Válvula de carga / Válvula de descarga</a></li>
+                  <li><a href="productos.html">Boca abierta / Fondo cerrado</a></li>
+                  <li><a href="productos.html">Boca abierta / Válvula de descarga</a></li>
+                  <li><a href="productos.html">Válvula de carga / Fondo cerrado</a></li>
+                  <li><a href="productos.html">Boca con pollera / Fondo cerrado</a></li>
+                  <li><a href="productos.html">Boca con pollera / Válvula de descarga</a></li>
+                  <li><a href="productos.html">Válvula de carga / Válvula de descarga</a></li>
                 </ul>
               </li>
             </ul>
