--- a/productos.html
+++ b/productos.html
@@ -78,6 +78,151 @@
 
 
   <main class="main">
+
+    <div class="modal fade" id="serviciosModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <ul class="nav nav-tabs modal-tabs" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#cotizacion-tab" type="button" role="tab">
+                  <i class="bi bi-calculator"></i> Solicitar Cotización
+                </button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#asesoria-tab" type="button" role="tab">
+                  <i class="bi bi-chat-dots"></i> Asesoramiento Técnico
+                </button>
+              </li>
+            </ul>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+    
+          <div class="modal-body">
+            <div class="tab-content">
+              <!-- Formulario de Cotización -->
+              <div class="tab-pane fade show active" id="cotizacion-tab" role="tabpanel">
+                <form class="cotizacion-form" id="formCotizacion">
+                  <div class="row g-3">
+                    <div class="col-md-6">
+                      <div class="form-floating">
+                        <input type="text" class="form-control" id="cotizacion-nombre" required>
+                        <label>Nombre</label>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-floating">
+                        <input type="email" class="form-control" id="cotizacion-email" required>
+                        <label>Email</label>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-floating">
+                        <input type="text" class="form-control" id="cotizacion-empresa">
+                        <label>Empresa</label>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-floating">
+                        <input type="tel" class="form-control" id="cotizacion-telefono" required>
+                        <label>Teléfono</label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="form-floating">
+                        <select class="form-select" id="cotizacion-producto" required>
+                          <option value="" selected disabled>Seleccione un producto</option>
+                          <optgroup label="Big Bags">
+                            <option>Boca abierta/Fondo cerrado</option>
+                            <option>Boca abierta/Válvula descarga</option>
+                            <option>Válvula de carga/Fondo cerrado</option>
+                            <option>Boca con pollera/Fondo cerrado</option>
+                            <option>Boca con pollera/Válvula descarga</option>
+                            <option>Válvula de carga/Válvula descarga</option>
+                          </optgroup>
+                          <optgroup label="Otros Productos">
+                            <option>Bolsa de Rafia</option>
+                            <option>Tela Cubre Cerco</option>
+                            <option>Bulk Liner</option>
+                          </optgroup>
+                        </select>
+                        <label>Producto a cotizar</label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="form-floating">
+                        <textarea class="form-control" id="cotizacion-mensaje" style="height: 120px"></textarea>
+                        <label>Especificaciones y cantidades</label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="btn-submit">
+                        <i class="bi bi-send"></i> Solicitar Cotización
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+    
+              <!-- Formulario de Asesoramiento -->
+              <div class="tab-pane fade" id="asesoria-tab" role="tabpanel">
+                <form class="asesoria-form" id="formAsesoria">
+                  <div class="row g-3">
+                    <div class="col-md-6">
+                      <div class="form-floating">
+                        <input type="text" class="form-control" id="asesoria-nombre" required>
+                        <label>Nombre</label>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-floating">
+                        <input type="email" class="form-control" id="asesoria-email" required>
+                        <label>Email</label>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-floating">
+                        <input type="text" class="form-control" id="asesoria-empresa">
+                        <label>Empresa</label>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-floating">
+                        <input type="tel" class="form-control" id="asesoria-telefono" required>
+                        <label>Teléfono</label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="form-floating">
+                        <select class="form-select" id="asesoria-tipo" required>
+                          <option value="" selected disabled>Seleccione el tipo de asesoramiento</option>
+                          <option>Técnico</option>
+                          <option>Producto</option>
+                          <option>Aplicación</option>
+                          <option>Otro</option>
+                        </select>
+                        <label>Tipo de asesoramiento</label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="form-floating">
+                        <textarea class="form-control" id="asesoria-consulta" style="height: 120px"></textarea>
+                        <label>Describa su consulta</label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="btn-submit">
+                        <i class="bi bi-send"></i> Solicitar Asesoramiento
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Banner del Producto -->
     <div class="page-title dark-background">
       <div class="container position-relative">
