--- a/nosotros.html
+++ b/nosotros.html
@@ -370,8 +370,8 @@
       <div class="timeline-item">
         <div class="timeline-content">
           <span class="timeline-date">2018</span>
-          <h4>Certificación de calidad</h4>
-          <p>Obtuvimos importantes certificaciones que avalan la calidad de nuestros productos y procesos.</p>
+          <h4>Innovación Tecnológica</h4>
+          <p>Incorporamos tecnología de última generación para optimizar la producción y ofrecer productos de mayor calidad.</p>
         </div>
       </div>
 
@@ -385,7 +385,6 @@
     </div>
   </div>
 </div>
-
 <!-- Sección de Proceso -->
 <div class="process-section" data-aos="fade-up">
   <div class="container">
@@ -515,15 +514,35 @@
   </footer>
 
 
-  <div class="whatsapp-container">
-    <a href="https://wa.me/5491135916710?text=Hola,%20me%20gustaría%20obtener%20más%20información" 
-       class="whatsapp-btn" 
-       target="_blank"
-       rel="noopener noreferrer">
-        <i class="bi bi-whatsapp"></i>
-    </a>
-    <span class="whatsapp-tooltip">¿En qué podemos ayudarte?</span>
-</div>
+  <!-- Botón de WhatsApp con tooltip -->
+  <div class="assistant-container">
+    <button class="assistant-btn" id="assistantBtn">
+        <div class="icon-container">
+            <i class="bi bi-person-workspace"></i>
+            <i class="bi bi-headset secondary-icon"></i>
+        </div>
+    </button>
+    <span class="assistant-tooltip">¿Cómo podemos ayudarte?</span>
+    <div class="assistant-menu" id="assistantMenu">
+        <button class="menu-item" data-bs-toggle="modal" data-bs-target="#serviciosModal" 
+                onclick="activateTab('cotizacion-tab')">
+            <i class="bi bi-calculator"></i>
+            Solicitar Cotización
+        </button>
+        <button class="menu-item" data-bs-toggle="modal" data-bs-target="#serviciosModal"
+                onclick="activateTab('asesoria-tab')">
+            <i class="bi bi-tools"></i>
+            Asesoramiento Técnico
+        </button>
+        <a href="https://wa.me/5491135916710?text=Hola,%20quisiera%20hablar%20con%20un%20asesor" 
+           class="menu-item"
+           target="_blank"
+           rel="noopener noreferrer">
+            <i class="bi bi-headset"></i>
+            Hablar con un Asesor
+        </a>
+    </div>
+  </div>
   <!-- Scroll Top Button -->
   <a href="#" id="scroll-top" class="scroll-top">
     <i class="bi bi-arrow-up-short"></i>
@@ -537,5 +556,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/productos.js"></script>
+  <script src="assets/js/assistant.js"></script>
+
 </body>
 </html>
