--- a/diseño.html
+++ b/diseño.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Diseño- MaleMax</title>
-  <meta name="description" content="Soluciones especializadas en Big Bags y embalajes industriales">
-  <meta name="keywords" content="big bags, embalajes, bulk liner, bolsas industriales">
+  <meta name="description" content="Servicio de diseño personalizado para embalajes industriales. Desarrollamos soluciones a medida con impresión de alta calidad y especificaciones técnicas precisas">
+  <meta name="keywords" content="diseño big bags, personalización embalajes, impresión industrial, desarrollo técnico, soluciones a medida, diseño contenedores, especificaciones técnicas">
 
   <!-- Favicons -->
   <link href="./assets/img/favicon2.png" rel="icon">
