--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>MaleMax</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Expertos en fabricación de Big Bags y soluciones de embalaje industrial. Ofrecemos productos de alta calidad, resistentes y personalizables para la industria y el agro">
+  <meta name="keywords" content="big bags, embalaje industrial, bulk liner, bolsones industriales, cubre cercos, bolsas de rafia, contenedores flexibles, FIBC, maxisacos">
 
   <!-- Favicons -->
   <link href="assets/img/favicon2.png" rel="icon">
