--- a/nosotros.html
+++ b/nosotros.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Nosotros- MaleMax</title>
-  <meta name="description" content="Soluciones especializadas en Big Bags y embalajes industriales">
-  <meta name="keywords" content="big bags, embalajes, bulk liner, bolsas industriales">
+  <meta name="description" content="Más de una década de experiencia en la fabricación de soluciones de embalaje industrial. Descubre nuestra historia, valores y compromiso con la calidad y el servicio al cliente">
+  <meta name="keywords" content="empresa embalaje industrial, fabricante big bags, historia malemax, experiencia industrial, servicio personalizado, calidad embalajes, equipo profesional">
 
   <!-- Favicons -->
   <link href="./assets/img/favicon2.png" rel="icon">
