--- a/productos.html
+++ b/productos.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Nuestros Productos - MaleMax</title>
-  <meta name="description" content="Soluciones especializadas en Big Bags y embalajes industriales">
-  <meta name="keywords" content="big bags, embalajes, bulk liner, bolsas industriales">
+  <meta name="description" content="Amplia gama de Big Bags y soluciones de embalaje industrial: contenedores flexibles, bulk liners, bolsas de rafia y cubre cercos. Productos personalizables de alta resistencia">
+  <meta name="keywords" content="big bags tipos, contenedores flexibles, bulk liner contenedor, cubre cerco obra, bolsas industriales, embalaje personalizado, FIBC especiales, maxisacos industriales">
 
   <!-- Favicons -->
   <link href="./assets/img/favicon2.png" rel="icon">
