--- a/nosotros.html
+++ b/nosotros.html
@@ -470,8 +470,11 @@
               <li>
                 <i class="bi bi-telephone"></i>
                 <div class="contact-info">
-                  <strong>Teléfono:</strong>
-                  <p><a href="tel:+541112345678">+54 9 11-3591-6710</a></p>
+                  <strong>Teléfonos:</strong>
+                  <p><a href="tel:+541112345678">(011) 3986-9989</a></p>
+                  <p>- Interno 201 Ventas</p>
+                  <p>- Interno 200 Administración</p>
+                  <p><a href="tel:+541112345678">54 9 11-3591-6710</a></p>
                 </div>
               </li>
             </ul>
