--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
             <i class="bi bi-envelope flex-shrink-0"></i>
             <div>
               <h3>Email</h3>
-              <p>ventas@malemaxsa.com</p>
+              <p>ventas@malemaxsrl.com</p>
             </div>
           </div>
         </div>
@@ -1125,7 +1125,7 @@
                 <i class="bi bi-envelope"></i>
                 <div class="contact-info">
                   <strong>Email:</strong>
-                  <p><a href="mailto:ventas@malemaxsa.com">ventas@malemaxsa.com</a></p>
+                  <p><a href="mailto:ventas@malemaxsrl.com">ventas@malemaxsrl.com</a></p>
                 </div>
               </li>
               <li>
