--- a/diseño.html
+++ b/diseño.html
@@ -601,7 +601,7 @@
               <i class="bi bi-envelope"></i>
               <div class="contact-info">
                 <strong>Email:</strong>
-                <p><a href="mailto:ventas@malemaxsa.com">ventas@malemaxsa.com</a></p>
+                <p><a href="mailto:ventas@malemaxsrl.com">ventas@malemaxsrl.com</a></p>
               </div>
             </li>
             <li>
